--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "@types/marked": "^4.0.8",
     "@types/three": "^0.150.0",
     "@types/yaml-front-matter": "^4.1.0",
-    "dompurify": "^3.0.1",
-    "marked": "^4.3.0",
     "normalize.css": "^8.0.1",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.2",
+    "remark-parse": "^10.0.1",
+    "remark-parse-frontmatter": "^1.0.3",
+    "remarked": "^0.1.4",
     "sass": "^1.60.0",
     "solid-js": "^1.6.10",
     "three": "^0.150.1",
+    "unified": "^10.1.2",
     "yaml-front-matter": "^4.1.1"
   }
 }
